2003-04-29  Jan Nieuwenhuizen  <janneke@gnu.org>

	* GNUmakefile.in (SUBDIRS): midi2ly.1 build fix backport: build
	python before scripts (thanks Anthony).

2003-04-15  Jan Nieuwenhuizen  <janneke@gnu.org>

	* debian: Update.  Remove mentioning of `mudela'; There's no such
	thing.
	
2003-04-14  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Backport flex issue:

	    * stepmake/aclocal.m4: Include compile fix for broken flex, as
	    used in includable-lexer.hh.

	    * lily/lexer.ll (avoid_silly_flex_induced_gcc_warnings): Disable.

	    * lily/includable-lexer.cc [!HAVE_FLEXLEXER_YY_CURRENT_BUFFER]
	    (yy_current_buffer): New macro, compile hacks for flex 2.5.29.

	    * lily/include/includable-lexer.hh: 
	    * lily/lexer.ll: Hack for multiple include of FlexLexer.h.

	    * config.hh.in (HAVE_FLEXLEXER_YY_CURRENT_BUFFER): Add.

	    * aclocal.m4: Regenerate.

	    * stepmake/aclocal.m4 (STEPMAKE_FLEXLEXER): Check for
	    yyFlexLexer.yy_current_buffer, which was removed in flex-2.5.29.

	* scm/pdftex.scm (start-system): Bugfix: add closing brace (Beernd
	Noordkamp).

2003-03-04  Jan Nieuwenhuizen  <janneke@gnu.org>

	* cygwin/post-lilypond.sh: Add FHS-specified path for fonts to
	clean out.

2003-04-09  Mats Bengtsson  <mats.bengtsson@s3.kth.se>

	* Documentation/topdocs/AUTHORS.texi (AUTHORS): Updated contact
	information.

2003-04-02  Mats Bengtsson  <mats.bengtsson@s3.kth.se>

	* lily/multi-measure-rest.cc (set_spacing_rods): Handle the
	minumum-length property correctly.

2003-03-30  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* VERSION (MY_PATCH_LEVEL): 1.6.9 released 

2003-03-27  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scripts/ly2dvi.py (run_dvips): +add  .map file.

2003-03-16  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
	
	* lily/parser.yy (scalar): DIGIT is also a scalar.

	* lily/scm-hash.cc (remove): prevent underflow of elt_count_. This
	fixes crashes while dumping MIDI.

	* ly/performer-init.ly (FiguredBassContext): add Figured bass for
	midi
