@@ -1,3 +1,8 @@
+2003-05-16  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
+
+	* lily/multi-measure-rest-engraver.cc
+	(start_translation_timestep): backport of 1.7 grace + mmrest fix. 
+
 2003-04-29  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* GNUmakefile.in (SUBDIRS): midi2ly.1 build fix backport: build
